# japanese-typesetting

./: development_tasks.md  progress_report.md  requirements_analysis.md  software_architecture.md  todo.md
japanese-typesetting/: .gitignore  CMakeLists.txt  vcpkg.json
japanese-typesetting/.github/workflows/: ci.yml
japanese-typesetting/docs/: local_setup_guide.md  plugin_development_guide.md  technology_stack.md  user_manual.md
japanese-typesetting/include/japanese_typesetting/cli/: cli.h
japanese-typesetting/include/japanese_typesetting/core/document/: document.h
japanese-typesetting/include/japanese_typesetting/core/style/: style.h
japanese-typesetting/include/japanese_typesetting/core/typesetting/: line_break.h  ruby.h  typesetting.h  typesetting_engine.h  typesetting_rules.h  vertical_layout.h
japanese-typesetting/include/japanese_typesetting/core/unicode/: unicode.h
japanese-typesetting/include/japanese_typesetting/gui/: gui.h  preview_widget.h
japanese-typesetting/include/japanese_typesetting/output/: epub_output.h  html_output.h  output_format_switcher.h  pdf_output.h
japanese-typesetting/include/japanese_typesetting/plugin/: plugin_loader.h  plugin_manager.h
japanese-typesetting/samples/plugins/: CMakeLists.txt  sample_ruby_plugin.cpp  sample_ruby_plugin.h
japanese-typesetting/src/: CMakeLists.txt  main.cpp
japanese-typesetting/src/cli/: cli.cpp  main_cli.cpp
japanese-typesetting/src/core/document/: document.cpp
japanese-typesetting/src/core/style/: style.cpp
japanese-typesetting/src/core/typesetting/: line_break.cpp  ruby.cpp  typesetting.cpp  typesetting_engine.cpp  typesetting_rules.cpp  vertical_layout.cpp
japanese-typesetting/src/core/unicode/: unicode.cpp
japanese-typesetting/src/gui/: gui.cpp  main_gui.cpp  preview_widget.cpp
japanese-typesetting/src/output/: output_format_switcher.cpp
japanese-typesetting/src/output/epub/: epub_output.cpp
japanese-typesetting/src/output/html/: html_output.cpp
japanese-typesetting/src/output/pdf/: pdf_output.cpp
japanese-typesetting/src/plugin/: plugin_loader.cpp  plugin_manager.cpp
japanese-typesetting/tests/: CMakeLists.txt
japanese-typesetting/tests/integration/: CMakeLists.txt  document_processing_test.cpp  integration_test.cpp  typesetting_engine_test.cpp
japanese-typesetting/tests/unit/: CMakeLists.txt  cli_test.cpp  document_test.cpp  plugin_test.cpp  sample_ruby_plugin_test.cpp  style_test.cpp  typesetting_test.cpp  unicode_test.cpp
